# image-registration

./: .gitignore  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  deploy.sh  dockerfile  image-registration-demo.py  packages.txt  pyproject.toml  requirements.txt  test-local.sh
