[project]
name = "image-registration"
version = "0.1.0"
description = "This is a demonstration of how transformation matrices affect registration for the affine case."
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python-headless>=4.12.0.88",
    "pillow>=12.0.0",
    "streamlit>=1.51.0",
]
